--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "shangbo.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build src/shangbo.html"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "parcel-bundler": "^1.12.5"
-    "is-svg "： " > = 4.2.2 "
+    "parcel-bundler": "^1.12.5",
+    "is-svg ": " > = 4.2.2 "
   }
 }
